rsync add src module

--- a/configs/rsyncd.conf
+++ b/configs/rsyncd.conf
@@ -25,3 +25,12 @@ hosts allow = 192.168.2.0/24
 hosts deny = 0.0.0.0/32
 auth users = backup
 secrets file = /etc/rsyncd.pwd
+
+[src]
+path = /root/src
+read only = true
+list = true
+hosts allow = 192.168.2.0/24
+hosts deny = 0.0.0.0/32
+auth users = backup
+secrets file = /etc/rsyncd.pwd
